docs/content/docs/v5/api-reference/workflow-globals.mdx
---
title: Workflow Globals
description: Global APIs available inside workflow functions.
type: reference
summary: Reference of all global APIs available inside workflow functions.
languageSwitcher:
  - ts
  - py
prerequisites:
  - /docs/foundations/workflows-and-steps
related:
  - /docs/errors/node-js-module-in-workflow
  - /docs/errors/fetch-in-workflow
  - /docs/errors/timeout-in-workflow
  - /docs/how-it-works/code-transform
---

Workflow functions run in a restricted environment that prevents access to non-deterministic or side-effecting APIs. This page lists all global APIs available inside <LanguageText code ts='"use workflow"' py="@workflow" /> functions.

For full <LanguageText ts="Node.js" py="Python"/> runtime access, use [step functions](/docs/foundations/workflows-and-steps#step-functions).

## Deterministic APIs

<LanguageContent value="ts">

These APIs are available but are **seeded or fixed** to ensure deterministic behavior across replays.

| API | Behavior |
|-----|----------|
| [`Math.random()`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/random) | Seeded random number generator: same seed produces the same sequence every replay |
| [`Date`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date) / `Date.now()` / `new Date()` | Returns a fixed timestamp that advances with the workflow's logical clock |
| [`crypto.getRandomValues()`](https://developer.mozilla.org/en-US/docs/Web/API/Crypto/getRandomValues) | Seeded: produces deterministic output for a given workflow run |
| [`crypto.randomUUID()`](https://developer.mozilla.org/en-US/docs/Web/API/Crypto/randomUUID) | Seeded: produces deterministic UUIDs for a given workflow run |
| [`crypto.subtle.digest()`](https://developer.mozilla.org/en-US/docs/Web/API/SubtleCrypto/digest) | Computed synchronously via `node:crypto` (values are byte-identical to WebCrypto), so the promise settles at a deterministic point during replay |

<Callout type="info">
You can safely use `Math.random()`, `Date.now()`, and `crypto.randomUUID()` in workflow functions. The framework ensures these return the same values across replays.
</Callout>

</LanguageContent>
<LanguageContent value="py">

Python's standard-library time and random APIs are blocked inside workflow bodies. Use these replacements from `vercel.workflow`; they are **seeded or fixed** to ensure deterministic behavior across replays.

| API | Return type | Behavior |
| --- | --- | --- |
| `workflow.now()` | `datetime.datetime` | Returns the workflow's logical time as a timezone-aware `datetime`. The value is stable at the same point in every replay and advances with the event log. |
| `workflow.time_ns()` | `int` | Returns the same logical time as `now()`, expressed as nanoseconds since the Unix epoch. |
| `workflow.random()` | `random.Random` | Returns the run-scoped `random.Random` instance, deterministically seeded from the run ID. The same seed produces the same sequence on every replay. Repeated calls return the same generator object within a run; use normal methods such as `.random()`, `.randint()`, `.choice()`, and `.shuffle()`. |

<Callout type="warn">
These functions can only be called from a workflow body. Steps should use the normal `datetime`, `time`, and `random` APIs.
</Callout>

</LanguageContent>

<LanguageContent value="ts">

## Web platform APIs

These standard Web APIs are available in workflow functions:

- [`Headers`](https://developer.mozilla.org/en-US/docs/Web/API/Headers)
- [`TextEncoder`](https://developer.mozilla.org/en-US/docs/Web/API/TextEncoder) / [`TextDecoder`](https://developer.mozilla.org/en-US/docs/Web/API/TextDecoder)
- [`URL`](https://developer.mozilla.org/en-US/docs/Web/API/URL) / [`URLSearchParams`](https://developer.mozilla.org/en-US/docs/Web/API/URLSearchParams)
- [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) / [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response): custom implementations with [special behavior in the workflow context](/docs/foundations/serialization#request--response). Body methods like `.json()` and `.text()` are automatically treated as step invocations.
- [`console`](https://developer.mozilla.org/en-US/docs/Web/API/console)
- [`structuredClone`](https://developer.mozilla.org/en-US/docs/Web/API/Window/structuredClone)
- [`atob`](https://developer.mozilla.org/en-US/docs/Web/API/Window/atob) / [`btoa`](https://developer.mozilla.org/en-US/docs/Web/API/Window/btoa)
- [`AbortController`](https://developer.mozilla.org/en-US/docs/Web/API/AbortController) / [`AbortSignal`](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal): A durable, serializable implementation whose abort state survives replay and can be passed into steps to cancel in-flight work. See [Cancellation](/docs/foundations/cancellation).

</LanguageContent>
<LanguageContent value="py">

## asyncio APIs

Python workflows run on a custom event loop that supports deterministic `asyncio` scheduling and concurrency APIs.

- [`asyncio.sleep()`](https://docs.python.org/3/library/asyncio-task.html#asyncio.sleep)
- [`asyncio.gather()`](https://docs.python.org/3/library/asyncio-task.html#asyncio.gather) / [`TaskGroup`](https://docs.python.org/3/library/asyncio-task.html#task-groups)
- [`asyncio.create_task()`](https://docs.python.org/3/library/asyncio-task.html#asyncio.create_task) / [`asyncio.ensure_future()`](https://docs.python.org/3/library/asyncio-future.html#asyncio.ensure_future) / [`asyncio.shield()`](https://docs.python.org/3/library/asyncio-task.html#asyncio.shield)
- [`asyncio.wait_for()`](https://docs.python.org/3/library/asyncio-task.html#asyncio.wait_for) / [`asyncio.timeout()`](https://docs.python.org/3/library/asyncio-task.html#timeouts) / [`Task.cancel()`](https://docs.python.org/3/library/asyncio-task.html#asyncio.Task.cancel): Timing out or cancelling a task propagates cancellation to the currently awaited step when it is declared with `cancellable=True`. See [Cancellation](/docs/foundations/cancellation).

</LanguageContent>

## Environment variables

<LanguageContent value="ts">

`process.env` is available as a **read-only, frozen** snapshot of the environment variables at the time the workflow was started. You cannot modify it.

```typescript
export async function myWorkflow() {
  "use workflow";

  const apiKey = process.env.API_KEY; // works
  process.env.FOO = "bar"; // throws: process.env is frozen
}
```

</LanguageContent>
<LanguageContent value="py">

`os.environ` is available inside workflow functions as a snapshot of the host process environment.

```python
import os

api_key = os.environ["API_KEY"]
```

</LanguageContent>

<LanguageContent value="ts">

## Binary data

Standard JavaScript typed arrays (`Uint8Array`, `Int32Array`, `Float64Array`, etc.) are available in workflow functions.

### Base64 and hex encoding

The workflow environment provides [`Uint8Array` base64 and hex methods](https://tc39.es/proposal-arraybuffer-base64/) for encoding and decoding binary data:

{/* @skip-typecheck: polyfilled methods not available in host TypeScript */}
```typescript
// Encode to base64
const bytes = new Uint8Array([72, 101, 108, 108, 111]);
bytes.toBase64(); // "SGVsbG8="
bytes.toBase64({ alphabet: "base64url" }); // URL-safe variant
bytes.toBase64({ omitPadding: true }); // "SGVsbG8"

// Decode from base64
Uint8Array.fromBase64("SGVsbG8="); // Uint8Array([72, 101, 108, 108, 111])

// Encode to hex
bytes.toHex(); // "48656c6c6f"

// Decode from hex
Uint8Array.fromHex("48656c6c6f"); // Uint8Array([72, 101, 108, 108, 111])

// Write into an existing array
const target = new Uint8Array(5);
target.setFromBase64("SGVsbG8="); // { read: 8, written: 5 }
target.setFromHex("48656c6c6f"); // { read: 10, written: 5 }
```

<Callout type="info">
These methods are polyfilled in the workflow environment. When the JavaScript runtime ships native support, the polyfill is automatically bypassed.
</Callout>

</LanguageContent>

## Not available

The following are **not available** in workflow functions. Move this logic to [step functions](/docs/foundations/workflows-and-steps#step-functions) instead.

<LanguageContent value="ts">

- **Node.js core modules**: `fs`, `path`, `http`, `https`, `net`, `dns`, `child_process`, `cluster`, `os`, `stream`, `crypto` (Node.js version), etc. See [node-js-module-in-workflow](/docs/errors/node-js-module-in-workflow).
- **Global `fetch`**: Use [`import { fetch } from "workflow"`](/docs/api-reference/workflow/fetch) instead. See [fetch-in-workflow](/docs/errors/fetch-in-workflow).
- **Timers**: `setTimeout`, `setInterval`, `setImmediate`, and their `clear*` counterparts. Use [`sleep()`](/docs/api-reference/workflow/sleep) instead. See [timeout-in-workflow](/docs/errors/timeout-in-workflow).
- **`Buffer`**: Node.js-specific API. Use `Uint8Array` with `toBase64()` / `fromBase64()` / `toHex()` / `fromHex()` for binary data encoding, or `atob()` / `btoa()` for string-based base64.
- **`WeakRef` and `FinalizationRegistry`**: Garbage collection timing is not deterministic, so observing it would make workflow code impossible to replay. (`WeakMap` and `WeakSet` remain available since they do not expose garbage collection state.)
- **`Atomics.waitAsync`**: a wall-clock timer, which cannot be replayed. Use [`sleep()`](/docs/api-reference/workflow/sleep) instead.
- **Async `WebAssembly` compilation**: The `compile`, `instantiate`, `compileStreaming`, and `instantiateStreaming` methods resolve on compile-thread timing. The synchronous `new WebAssembly.Module()` and `new WebAssembly.Instance()` constructors remain available.

</LanguageContent>
<LanguageContent value="py">

- **Wall-clock time and blocking sleep**: `datetime.datetime.now()`, `datetime.datetime.utcnow()`, `datetime.date.today()`, `time.time()`, `time.monotonic()`, `time.perf_counter()`, and `time.sleep()`. Use `workflow.now()`, `workflow.time_ns()`, and `await workflow.sleep()` or `await asyncio.sleep()` instead.
- **Implicit or system randomness**: Module-level `random` functions, `random.SystemRandom`, `os.urandom()`, and `uuid.uuid4()`. Use `workflow.random()` or an explicitly seeded `random.Random(seed)` instance instead.
- **Filesystem, network, and process I/O**: `open()`, file operations, socket creation, subprocesses, and multiprocessing. Pure path manipulation through `os.path` remains available.
- **Threads and event-loop escapes**: Starting `threading.Thread` or `threading.Timer`, `asyncio.to_thread()`, creating or replacing event loops, and asyncio network, server, or subprocess APIs.
- **Dynamic execution and interactive APIs**: `eval()`, `exec()`, `compile()`, `input()`, and `breakpoint()`.
- **Host and native access**: Modules such as `ctypes`, `signal`, `fcntl`, `mmap`, `sqlite3`, `pty`, `termios`, `resource`, `faulthandler`, `syslog`, and `readline` cannot be used to access the host runtime.

For sandbox configuration and module passthrough behavior, see [`SandboxPolicy`](/docs/api-reference/python/sandbox-policy).

</LanguageContent>
